tests/Project1/student_test/test_1_s14.out
Error type B at Line 5: Missing semicolon ';'
Error type B at Line 9: Missing closing bracket ']'
Error type B at Line 10: Missing closing parenthesis ')'
